lib/crates/fabro-llm/tests/it/wire/snapshots/it__wire__gemini__encode_url_attachments.snap
---
source: lib/crates/fabro-llm/tests/it/wire/gemini.rs
expression: rendered
---
{
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "Describe these attachments."
        },
        {
          "fileData": {
            "mimeType": "image/png",
            "fileUri": "https://example.com/picture.png"
          }
        },
        {
          "fileData": {
            "mimeType": "application/pdf",
            "fileUri": "https://example.com/report.pdf"
          }
        }
      ]
    }
  ],
  "generationConfig": {
    "maxOutputTokens": 128
  },
  "safety_settings": [
    {
      "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
      "threshold": "BLOCK_ONLY_HIGH"
    }
  ]
}
