lib/crates/fabro-llm/tests/it/wire/snapshots/it__wire__gemini__stream_end_synthesizes_finish_without_finish_reason.snap
---
source: lib/crates/fabro-llm/tests/it/wire/gemini.rs
expression: rendered
---
[
  {
    "type": "stream_start"
  },
  {
    "type": "text_start",
    "text_id": "[UUID]"
  },
  {
    "type": "text_delta",
    "delta": "Hello",
    "text_id": "[UUID]"
  },
  {
    "type": "finish",
    "finish_reason": "stop",
    "usage": {
      "input_tokens": 0,
      "output_tokens": 0,
      "reasoning_tokens": 0,
      "cache_read_tokens": 0,
      "cache_write_tokens": 0
    },
    "response": {
      "id": "[UUID]",
      "model": "gemini-test",
      "provider": "gemini",
      "message": {
        "role": "assistant",
        "content": [
          {
            "kind": "text",
            "data": "Hello"
          }
        ]
      },
      "finish_reason": "stop",
      "usage": {
        "input_tokens": 0,
        "output_tokens": 0,
        "reasoning_tokens": 0,
        "cache_read_tokens": 0,
        "cache_write_tokens": 0
      },
      "raw": null,
      "warnings": [],
      "rate_limit": null
    }
  }
]
